--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nestjs-i18n",
-  "version": "10.3.0",
+  "name": "@saas-buildkit/nestjs-i18n",
+  "version": "0.0.1",
   "homepage": "https://nestjs-i18n.com",
   "description": "The i18n module for Nest.",
   "author": "Toon van Strijp",
@@ -25,6 +25,7 @@
   "bin": {
     "nestjs-i18n": "./dist/cli.js"
   },
+  "module": "./index.mjs",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
